maj crud 2.0